<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".screens.UpdateDeviceMenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:src="@drawable/sunstone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center|bottom"
        android:layout_marginHorizontal="70dp">

        <Button
            android:id="@+id/btn_update_menu_single_var"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_update_single_device"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue"/>

        <Button
            android:id="@+id/btn_update_menu_multi_var"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_update_multiple_devices"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue"/>


        <Button
            android:id="@+id/btn_update_menu_single_dfu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/str_update_firmware_for_single_device"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue" />
        <Button
            android:id="@+id/btn_update_menu_multi_dfu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue"
            android:text="@string/str_update_firmware_for_multiple_devices"/>

        <Button
            android:id="@+id/btn_update_menu_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="30dp"
            android:padding="10dp"
            android:text="@string/str_go_back"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue" />


    </LinearLayout>


</LinearLayout>