<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".screens.MainMenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:layout_height="0dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:src="@drawable/sunstone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center|bottom">

        <Button
            android:id="@+id/btn_main_firmware_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_firmware_update"
            android:padding="15dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue"/>

        <Button
            android:id="@+id/btn_main_variables_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_variables_update"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue"/>

        <Button
            android:id="@+id/btn_main_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/str_logout"
            android:layout_marginTop="35dp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue"/>

        <Button
            android:id="@+id/btn_main_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="15dp"
            android:text="@string/str_quit"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/sunstone_darkblue" />


    </LinearLayout>

</LinearLayout>